--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
        <div class="home-content"> 
          <div class="text-1" data-aos="fade-up">Hello, my name is</div> 
          <div class="text-2">Sowmya</div> 
-         <div class="text-3">Im a student<span class="typing"></span></div> 
+         <div class="text-3">Im a <span class="typing"></span></div> 
        </div> 
      </div> 
    </section> 
